styles/style.css
html {
    box-sizing: border-box;
    background: #000;
    font-family: 'helvetica neue';
    color: #fff;
    font-size: 20px;
    font-weight: 200;
 }

body {
     margin: 0;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

a {
    text-decoration: none;
    color: #bbb;
}

a:hover {
    color: #fff;
}

i {
    opacity: 1;
    color: #fff;
}

.panels {
    min-height: 100vh;
    overflow: hidden;
    display: flex;
}

.panel {
    flex: 1;
    justify-content: center;
    display: flex;
    flex-direction: column;
    background-size: cover;
    background-position: center;
    overflow: hidden;
    transition: flex-grow 0.8s;
    cursor: pointer;
    align-items: center;
    align-content: center;
}

.panel:hover .panel-name {
    background: rgba(43, 21, 21, 0.4);
    transition: background 0.7s;
  

}

.panel .panel-name {
    margin: 20px;
    background: rgba(43, 21, 21, 0);
    width: 100%/3;
    font-size: 2em;
    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
    0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
    font-weight: 800;


}

.open {
    flex: 6;
    cursor: auto;
}

.mini {
    writing-mode: vertical-rl;
    text-orientation: sideways;
}

.about {
    background-image: url(https://images.unsplash.com/photo-1518482314145-038bd56eaa86?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80);
}

.work {
    background-image: url(https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
}

.contact {
    background-image: url(https://images.unsplash.com/photo-1529454488831-3c13b1640074?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
}

.container {
    width: 86%;
    margin: 30px;
    padding: 20px;
    background: rgba(43, 21, 21, 0.5)
}

.content {
    opacity: 0;
    transition: opacity 3s;
}

.active {
    opacity: 1; 
}

.portfolio {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.portfolio-item {
    max-width: 30%;
    margin: 10px;
    min-width: 150px;
    display: flex;
    flex-direction: column;
}

.portfolio-item img {
    max-width: 100%;
    height: auto;
}

.portfolio-item .source {
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
    display: flex;
    justify-content: center;
}

.portfolio-item .title {
    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
    0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);   
    display:flex;
    justify-content: center;
    font-size: 1em;
    margin: 1em 0;
}

h2 {
    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
    0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
}

